--- a/platformio.ini.dist
+++ b/platformio.ini.dist
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp32dev
+
 [env]
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17 -w
@@ -15,7 +18,9 @@ build_src_flags = -Wall -Wextra -Wpedantic -Wconversion -Werror
 test_framework = googletest
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@^6.7.0
+platform_packages =
+	platformio/framework-arduinoespressif32@^3.20017.0
 board = esp32dev
 framework = arduino
 test_ignore = native/*
@@ -24,10 +29,9 @@ lib_deps =
 	https://github.com/masto/LEDText#1c7a90d
 	https://github.com/AaronLiddiment/LEDMatrix#1ba98bc
 	https://github.com/tzapu/WiFiManager#v2.0.11-beta
-	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
+	ottowinter/ESPAsyncWebServer-esphome@^3.2.2
 	bblanchon/ArduinoJson@^6.19.3
-	ayushsharma82/WebSerial@^1.3.0
-	marvinroger/AsyncMqttClient@^0.9.0
+	ottowinter/AsyncMqttClient-esphome@^0.8.6
 board_build.partitions = partition_custom.csv
 monitor_speed = 115200
 ;; Uncomment below for OTA update
