Add typical Python virtual env directory to .gitignore
It's mildly annoying for dependencies installed in
a venv during development to show up as untracked
files in git. So let's not.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ platformio.ini
 platformio.ini-*
 include/marquee_config.h
 include/marquee_config.h-*
+mqtt_client_examples/.venv
 .pio
 .vscode
 TODO
