Make initial project setup a little easier
Eliminate having to copy platformio.ini.dist. Instead, provide a
default configuration that includes another file through
`extra_configs` in order to override settings.

This will make it easier for anyone who wants to keep in sync with
this repo while, for example, maintaining a local OTA configuration.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,23 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+;; PlatformIO Project Configuration File
+;;
+;;   Build options: build flags, source filter
+;;   Upload options: custom upload port, speed and extra flags
+;;   Library options: dependencies, extra library storages
+;;   Advanced options: extra scripting
+;;
+;; Please visit documentation for the other options and examples
+;; https://docs.platformio.org/page/projectconf.html
+
+;; Put the following (uncommented) in marquee.ini for OTA update
+; [env:esp32dev]
+;upload_port = marquee-hostname.local
+;upload_protocol = espota
 
 [platformio]
 default_envs = esp32dev
+;; You can create a marquee.ini file to override the configuration
+;; without having to edit this file.
+extra_configs = marquee.ini
 
 [env]
 build_unflags = -std=gnu++11
@@ -34,9 +42,7 @@ lib_deps =
 	heman/AsyncMqttClient-esphome@^2.1.0
 board_build.partitions = partition_custom.csv
 monitor_speed = 115200
-;; Uncomment below for OTA update
-; upload_port = your-marquee-hostname.local
-; upload_protocol = espota
+
 
 [env:native]
 platform = native
