Implement a basic Conway's Life module
The hard-code-and-recompile nature of this project is turning into a
bit of tech debt now that I want to have multiple marquees with
different configurations. I'd also like to be able to change them
on the fly.

This was a quick Sunday afternoon hack and is not very clean or
extensible, so it's going in a branch. I'm considering options
for a more flexible redesign. In the meantime, though, it does
look pretty cool: https://youtu.be/i_uLQUjtJxU

--- a/include/marquee_config.h.dist
+++ b/include/marquee_config.h.dist
@@ -63,6 +63,11 @@ constexpr uint8_t kClockWidth = 0;
 static_assert(kClockWidth < kMarqueeWidth,
               "Clock width must be less than the marquee width");
 
+// Pixel width of the life section (0 to disable)
+constexpr uint8_t kLifeWidth = kMarqueeWidth;
+static_assert(kLifeWidth <= kMarqueeWidth,
+              "Life width must be less than or equal to the marquee width");
+
 // Fonts for text scroller and clock
 constexpr const uint8_t* kTextFont = ClassicFontData;
 constexpr const uint8_t* kClockFont = MatriseFontData;
